--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "next start",
     "dev": "next dev",
-    "build": "next build"
+    "build": "next build",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "next": "^14.1.3",
@@ -14,8 +16,18 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "1.2.23",
+    "@storybook/addon-essentials": "^8.0.1",
+    "@storybook/addon-interactions": "^8.0.1",
+    "@storybook/addon-links": "^8.0.1",
+    "@storybook/addon-onboarding": "^8.0.1",
+    "@storybook/blocks": "^8.0.1",
+    "@storybook/nextjs": "^8.0.1",
+    "@storybook/react": "^8.0.1",
+    "@storybook/test": "^8.0.1",
     "@types/node": "20.11.30",
     "@types/react": "18.2.67",
+    "storybook": "^8.0.1",
     "typescript": "5.4.2"
   }
 }
