--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@storybook/addon-links": "^8.0.1",
     "@storybook/addon-onboarding": "^8.0.1",
     "@storybook/blocks": "^8.0.1",
+    "@storybook/manager-api": "^8.0.4",
     "@storybook/nextjs": "^8.0.1",
     "@storybook/react": "^8.0.1",
     "@storybook/test": "^8.0.1",
+    "@storybook/theming": "^8.0.4",
     "@types/node": "20.11.30",
     "@types/react": "18.2.67",
     "storybook": "^8.0.1",
