--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.34",
+    "addon-screen-reader": "^1.8.6",
     "next": "^14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
